examples/semantics/errors/error19.grace
fun error19 () : nothing
	fun foo(i:int): nothing
	{
		puti(8);
	}
{
	foo('b');
}
